* Warning message fix on email address import page (i.e Strict standards: Only variables should be passed by reference)	- Fixed

********************************Version 2.1************************************************************

* In view subscribers admin page, Filter option and paging moved to the top right corner (Previous version it was in bottom).
* Plugin tested for multisite installation blogs.
http://www.gopiplus.com/work/2014/08/31/email-subscribers-wordpress-plugin-network-activation-for-multisite-installation/

********************************Version 2.2************************************************************

* Warning message issue has been fix on notification mails. previously $post object was submitted to notification mail method without filtering post_id.
* Added new keywords ###POSTLINK-ONLY###, ###POSTLINK-WITHTITLE### for notification mail content.
	###POSTLINK-ONLY### 		- Use this key word to add post link in the mail content (Post link cannot be clickable)
	###POSTLINK-WITHTITLE### 	- Use this key word to display post link with title (Clickable post title)
	###POSTLINK### 				- Use this key word to display clickable post link.
	
********************************Version 2.3************************************************************

This warning issue has been fixed (Warning: call_user_func_array() expects parameter 1 to be a valid callback, function 'es_admin_option' not found or invalid function name)

********************************Version 2.4************************************************************

* Tested upto 4.1
* Fixed special character bug on Sender of Notification FROM email name.

********************************Version 2.5************************************************************

Now plugin supports custom post type. I.e. With this plugin, you can able to send automatic newsletter/notification emails when you publish custom posts.
